--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 - the build log should (also?) show the `.log` file when build fails (maybe just append it to the regular output)
 - fix crash which occurs only in non-debug build when the metropolis assistant is started
 - check why e.g. `\Leftrightarrow` doesn't appear in auto-completition
+- fix "Next" button becoming sensitive after fixing font issues when all `sty` files are already present
 
